after debugging my junit test problems.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,34 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <title>Recipe Project</title>
     <meta charset="UTF-8"/>
-
 </head>
 <body>
+<div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+        <div class="row">
+            <h3 th:text="'Recipe Index'"> Placeholder for Recipe Title</h3>
+        </div>
+        <div class="row" th:each="recipe : ${recipes}">
+            <div class="col-1" th:text="${recipe.id}">placeholder for id</div>
+            <div class="col-11" th:text="${recipe.description}">placeholder for description</div>
+        </div>
+    </div>
+    <div class="col-3"></div>
+</div>
 
-<h1 th:text="'Recipe Index'"> Placeholder for Recipe Title</h1>
-<table>
-    <tr>
-        <th>Recipe ID</th>
-        <th>Description</th>
-    </tr>
-    <tr th:each="recipe : ${recipes}">
-        <td th:text="${recipe.id}">placeholder for id</td>
-        <td th:text="${recipe.description}">placeholder for description</td>
-    </tr>
-</table>
-<hr/>
-<table>
-    <tr>
-        <th>Recipe Categories</th>
-    </tr>
-    <!--/*@thymesVar id="categories" type="<List>guru.springframework.recipes.model.Category"*/-->
-    <tr th:each="cat : ${categories}">
-        <td th:text="${cat.category}">Category goes here</td>
-    </tr>
-</table>
+<div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+        <div class="row">
+            <h3 th:text="'Recipe Categories'"> Placeholder for Recipe Categories</h3>
+        </div>
+        <div class="row" th:each="cat : ${categories}">
+            <div th:text="${cat.category}">placeholder for id</div>
+        </div>
+    </div>
+</div>
+
+
 <hr/>
 Page loaded at <span th:text="${#dates.format(#dates.createNow(),'MM/dd/YYYY HH:mm:ss')}">time goes here</span>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
